// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flow Manipulation actions should replace router node with a single-action node 1`] = `
Object {
  "inboundConnections": Object {
    "node0_exit0": "node0",
  },
  "node": Object {
    "actions": Array [
      Object {
        "all_urns": false,
        "text": "Hey!",
        "type": "send_msg",
        "uuid": "b1f332f3-bdd3-4891-aec5-1843a712dbf1",
      },
    ],
    "exits": Array [
      Object {
        "destination_uuid": null,
        "uuid": "1dce2b34-9aab-4e20-81c4-3f0408dcb671",
      },
    ],
    "uuid": "061fc171-8b79-4636-b892-bd0ea5aa9b42",
  },
  "ui": Object {
    "position": Object {
      "bottom": 370,
      "left": 0,
      "right": 220,
      "top": 280,
    },
    "type": "execute_actions",
  },
}
`;

exports[`Flow Manipulation init should gracefully handle missing ui 1`] = `
Object {
  "nodes": Object {
    "node0": Object {
      "inboundConnections": Object {},
      "node": Object {
        "actions": Array [
          Object {
            "text": "Hi there, this is your first action!",
            "type": "send_msg",
            "uuid": "node0_action0",
          },
          Object {
            "groups": Array [
              Object {
                "name": "Flow Participants",
                "uuid": "group_0",
              },
            ],
            "type": "add_contact_groups",
            "uuid": "node0_action1",
          },
          Object {
            "groups": Array [
              Object {
                "name": "Nonresponsive",
                "uuid": "group_1",
              },
            ],
            "type": "remove_contact_groups",
            "uuid": "node0_action2",
          },
          Object {
            "labels": Array [
              Object {
                "name": "Help",
                "uuid": "label_0",
              },
              Object {
                "name": "Feedback",
                "uuid": "label_1",
              },
            ],
            "type": "add_input_labels",
            "uuid": "node0_action3",
          },
          Object {
            "name": "Started",
            "type": "set_run_result",
            "uuid": "node0_action4",
            "value": "true",
          },
        ],
        "exits": Array [
          Object {
            "destination_uuid": "node1",
            "name": null,
            "uuid": "node0_exit0",
          },
        ],
        "uuid": "node0",
      },
      "ui": Object {
        "position": Object {
          "left": 0,
          "top": 0,
        },
        "type": "execute_actions",
      },
    },
    "node1": Object {
      "inboundConnections": Object {
        "node0_exit0": "node0",
      },
      "node": Object {
        "actions": Array [],
        "exits": Array [
          Object {
            "destination_uuid": "node2",
            "uuid": "node1_exit0",
          },
          Object {
            "destination_uuid": "node2",
            "uuid": "node1_exit1",
          },
          Object {
            "destination_uuid": "node2",
            "uuid": "node1_exit2",
          },
        ],
        "router": Object {
          "cases": Array [
            Object {
              "arguments": Array [
                "red",
              ],
              "category_uuid": "node1_cat0",
              "type": "has_any_word",
              "uuid": "node1_case0",
            },
            Object {
              "arguments": Array [
                "green",
              ],
              "category_uuid": "node1_cat1",
              "type": "has_any_word",
              "uuid": "node1_case1",
            },
          ],
          "categories": Array [
            Object {
              "exit_uuid": "node1_exit0",
              "name": "Red",
              "uuid": "node1_cat0",
            },
            Object {
              "exit_uuid": "node1_exit1",
              "name": "Green",
              "uuid": "node1_cat1",
            },
            Object {
              "exit_uuid": "node1_exit2",
              "name": "Other",
              "uuid": "node1_cat2",
            },
          ],
          "default_exit_uuid": "node1_exit2",
          "operand": "@run.input",
          "result_name": "color",
          "type": "switch",
          "wait": Object {
            "type": "msg",
          },
        },
        "uuid": "node1",
      },
      "ui": Object {
        "position": Object {
          "left": 0,
          "top": 150,
        },
        "type": "wait_for_response",
      },
    },
    "node2": Object {
      "inboundConnections": Object {
        "node1_exit0": "node1",
        "node1_exit1": "node1",
        "node1_exit2": "node1",
      },
      "node": Object {
        "actions": Array [
          Object {
            "text": "This has been really great.",
            "type": "send_msg",
            "uuid": "node2_action0",
          },
          Object {
            "field": Object {
              "key": "unknown_field",
              "name": "Unknown Field",
            },
            "type": "set_contact_field",
            "uuid": "node2_action1",
            "value": "Some Value",
          },
        ],
        "exits": Array [
          Object {
            "destination_uuid": "node3",
            "name": null,
            "uuid": "node2_exit0",
          },
        ],
        "uuid": "node2",
      },
      "ui": Object {
        "position": Object {
          "left": 0,
          "top": 300,
        },
        "type": "execute_actions",
      },
    },
    "node3": Object {
      "inboundConnections": Object {
        "node2_exit0": "node2",
      },
      "node": Object {
        "actions": Array [
          Object {
            "text": "Thanks for playing!",
            "type": "send_msg",
            "uuid": "node3_action0",
          },
        ],
        "exits": Array [
          Object {
            "destination_uuid": null,
            "name": null,
            "uuid": "node3_exit0",
          },
        ],
        "uuid": "node3",
      },
      "ui": Object {
        "position": Object {
          "left": 0,
          "top": 450,
        },
        "type": "execute_actions",
      },
    },
  },
}
`;

exports[`Flow Manipulation node editor normal editing should edit router nodes 1`] = `
Array [
  Object {
    "payload": Object {
      "typeConfig": Object {
        "aliases": Array [
          "switch",
        ],
        "description": "Wait for the contact to respond",
        "form": [Function],
        "localization": [Function],
        "localizeableKeys": Array [
          "categories",
          "cases",
        ],
        "name": "Wait for Response",
        "type": "wait_for_response",
        "visibility": Array [
          "messaging",
          "messaging_offline",
        ],
      },
    },
    "type": "UPDATE_TYPE_CONFIG",
  },
  Object {
    "payload": Object {
      "settings": Object {
        "localizations": Array [],
        "originalNode": Object {
          "inboundConnections": Object {
            "node0_exit0": "node0",
          },
          "node": Object {
            "actions": Array [],
            "exits": Array [
              Object {
                "destination_uuid": "node2",
                "uuid": "node1_exit0",
              },
              Object {
                "destination_uuid": "node2",
                "uuid": "node1_exit1",
              },
              Object {
                "destination_uuid": "node2",
                "uuid": "node1_exit2",
              },
            ],
            "router": Object {
              "cases": Array [
                Object {
                  "arguments": Array [
                    "red",
                  ],
                  "category_uuid": "node1_cat0",
                  "type": "has_any_word",
                  "uuid": "node1_case0",
                },
                Object {
                  "arguments": Array [
                    "green",
                  ],
                  "category_uuid": "node1_cat1",
                  "type": "has_any_word",
                  "uuid": "node1_case1",
                },
              ],
              "categories": Array [
                Object {
                  "exit_uuid": "node1_exit0",
                  "name": "Red",
                  "uuid": "node1_cat0",
                },
                Object {
                  "exit_uuid": "node1_exit1",
                  "name": "Green",
                  "uuid": "node1_cat1",
                },
                Object {
                  "exit_uuid": "node1_exit2",
                  "name": "Other",
                  "uuid": "node1_cat2",
                },
              ],
              "default_exit_uuid": "node1_exit2",
              "operand": "@run.input",
              "result_name": "color",
              "type": "switch",
              "wait": Object {
                "type": "msg",
              },
            },
            "uuid": "node1",
          },
          "ui": Object {
            "position": Object {
              "bottom": 370,
              "left": 0,
              "right": 220,
              "top": 280,
            },
            "type": "wait_for_response",
          },
        },
        "showAdvanced": false,
      },
    },
    "type": "UPDATE_NODE_EDITOR_SETTINGS",
  },
  Object {
    "payload": Object {
      "editorState": Object {
        "activity": Object {
          "nodes": Object {},
          "segments": Object {},
        },
        "activityInterval": 5000,
        "currentRevision": null,
        "debug": null,
        "dragActive": false,
        "dragDownPosition": null,
        "dragGroup": false,
        "dragNodeUUID": null,
        "dragSelection": null,
        "dragStartTime": 0,
        "fetchingFlow": false,
        "ghostNode": null,
        "language": null,
        "liveActivity": Object {
          "nodes": Object {},
          "segments": Object {},
        },
        "popped": null,
        "scrollToAction": null,
        "scrollToNode": null,
        "simulating": false,
        "translating": false,
        "visible": true,
        "warnings": Object {},
      },
    },
    "type": "UPDATE_EDITOR_STATE",
  },
]
`;

exports[`Flow Manipulation node editor opening and closing should only update things that are set 1`] = `
Array [
  Object {
    "payload": Object {
      "editorState": Object {
        "activity": Object {
          "nodes": Object {},
          "segments": Object {},
        },
        "activityInterval": 5000,
        "currentRevision": null,
        "debug": null,
        "dragActive": false,
        "dragDownPosition": null,
        "dragGroup": false,
        "dragNodeUUID": null,
        "dragSelection": null,
        "dragStartTime": 0,
        "fetchingFlow": false,
        "ghostNode": null,
        "language": null,
        "liveActivity": Object {
          "nodes": Object {},
          "segments": Object {},
        },
        "popped": null,
        "scrollToAction": null,
        "scrollToNode": null,
        "simulating": false,
        "translating": false,
        "visible": true,
        "warnings": Object {},
      },
    },
    "type": "UPDATE_EDITOR_STATE",
  },
  Object {
    "payload": Object {
      "settings": null,
    },
    "type": "UPDATE_NODE_EDITOR_SETTINGS",
  },
]
`;

exports[`Flow Manipulation node editor opening and closing should reset the node editor 1`] = `
Array [
  Object {
    "payload": Object {
      "editorState": Object {
        "ghostNode": null,
      },
    },
    "type": "UPDATE_EDITOR_STATE",
  },
  Object {
    "payload": Object {
      "settings": null,
    },
    "type": "UPDATE_NODE_EDITOR_SETTINGS",
  },
]
`;

exports[`Flow Manipulation nodes removal should remove node node0: Remove node0 1`] = `
Object {
  "node1": Object {
    "inboundConnections": Object {},
    "node": Object {
      "actions": Array [],
      "exits": Array [
        Object {
          "destination_uuid": "node2",
          "uuid": "node1_exit0",
        },
        Object {
          "destination_uuid": "node2",
          "uuid": "node1_exit1",
        },
        Object {
          "destination_uuid": "node2",
          "uuid": "node1_exit2",
        },
      ],
      "router": Object {
        "cases": Array [
          Object {
            "arguments": Array [
              "red",
            ],
            "category_uuid": "node1_cat0",
            "type": "has_any_word",
            "uuid": "node1_case0",
          },
          Object {
            "arguments": Array [
              "green",
            ],
            "category_uuid": "node1_cat1",
            "type": "has_any_word",
            "uuid": "node1_case1",
          },
        ],
        "categories": Array [
          Object {
            "exit_uuid": "node1_exit0",
            "name": "Red",
            "uuid": "node1_cat0",
          },
          Object {
            "exit_uuid": "node1_exit1",
            "name": "Green",
            "uuid": "node1_cat1",
          },
          Object {
            "exit_uuid": "node1_exit2",
            "name": "Other",
            "uuid": "node1_cat2",
          },
        ],
        "default_exit_uuid": "node1_exit2",
        "operand": "@run.input",
        "result_name": "color",
        "type": "switch",
        "wait": Object {
          "type": "msg",
        },
      },
      "uuid": "node1",
    },
    "ui": Object {
      "position": Object {
        "bottom": 370,
        "left": 0,
        "right": 220,
        "top": 280,
      },
      "type": "wait_for_response",
    },
  },
  "node2": Object {
    "inboundConnections": Object {
      "node1_exit0": "node1",
      "node1_exit1": "node1",
      "node1_exit2": "node1",
    },
    "node": Object {
      "actions": Array [
        Object {
          "text": "This has been really great.",
          "type": "send_msg",
          "uuid": "node2_action0",
        },
        Object {
          "field": Object {
            "key": "unknown_field",
            "name": "Unknown Field",
          },
          "type": "set_contact_field",
          "uuid": "node2_action1",
          "value": "Some Value",
        },
      ],
      "exits": Array [
        Object {
          "destination_uuid": "node3",
          "name": null,
          "uuid": "node2_exit0",
        },
      ],
      "uuid": "node2",
    },
    "ui": Object {
      "position": Object {
        "bottom": 498,
        "left": 0,
        "right": 220,
        "top": 400,
      },
    },
  },
  "node3": Object {
    "inboundConnections": Object {
      "node2_exit0": "node2",
    },
    "node": Object {
      "actions": Array [
        Object {
          "text": "Thanks for playing!",
          "type": "send_msg",
          "uuid": "node3_action0",
        },
      ],
      "exits": Array [
        Object {
          "destination_uuid": null,
          "name": null,
          "uuid": "node3_exit0",
        },
      ],
      "uuid": "node3",
    },
    "ui": Object {
      "position": Object {
        "bottom": 598,
        "left": 0,
        "right": 220,
        "top": 520,
      },
    },
  },
}
`;

exports[`Flow Manipulation nodes removal should remove node node1: Remove node1 1`] = `
Object {
  "node0": Object {
    "inboundConnections": Object {},
    "node": Object {
      "actions": Array [
        Object {
          "text": "Hi there, this is your first action!",
          "type": "send_msg",
          "uuid": "node0_action0",
        },
        Object {
          "groups": Array [
            Object {
              "name": "Flow Participants",
              "uuid": "group_0",
            },
          ],
          "type": "add_contact_groups",
          "uuid": "node0_action1",
        },
        Object {
          "groups": Array [
            Object {
              "name": "Nonresponsive",
              "uuid": "group_1",
            },
          ],
          "type": "remove_contact_groups",
          "uuid": "node0_action2",
        },
        Object {
          "labels": Array [
            Object {
              "name": "Help",
              "uuid": "label_0",
            },
            Object {
              "name": "Feedback",
              "uuid": "label_1",
            },
          ],
          "type": "add_input_labels",
          "uuid": "node0_action3",
        },
        Object {
          "name": "Started",
          "type": "set_run_result",
          "uuid": "node0_action4",
          "value": "true",
        },
      ],
      "exits": Array [
        Object {
          "destination_uuid": null,
          "name": null,
          "uuid": "node0_exit0",
        },
      ],
      "uuid": "node0",
    },
    "ui": Object {
      "position": Object {
        "bottom": 254,
        "left": 0,
        "right": 220,
        "top": 0,
      },
    },
  },
  "node2": Object {
    "inboundConnections": Object {},
    "node": Object {
      "actions": Array [
        Object {
          "text": "This has been really great.",
          "type": "send_msg",
          "uuid": "node2_action0",
        },
        Object {
          "field": Object {
            "key": "unknown_field",
            "name": "Unknown Field",
          },
          "type": "set_contact_field",
          "uuid": "node2_action1",
          "value": "Some Value",
        },
      ],
      "exits": Array [
        Object {
          "destination_uuid": "node3",
          "name": null,
          "uuid": "node2_exit0",
        },
      ],
      "uuid": "node2",
    },
    "ui": Object {
      "position": Object {
        "bottom": 498,
        "left": 0,
        "right": 220,
        "top": 400,
      },
    },
  },
  "node3": Object {
    "inboundConnections": Object {
      "node2_exit0": "node2",
    },
    "node": Object {
      "actions": Array [
        Object {
          "text": "Thanks for playing!",
          "type": "send_msg",
          "uuid": "node3_action0",
        },
      ],
      "exits": Array [
        Object {
          "destination_uuid": null,
          "name": null,
          "uuid": "node3_exit0",
        },
      ],
      "uuid": "node3",
    },
    "ui": Object {
      "position": Object {
        "bottom": 598,
        "left": 0,
        "right": 220,
        "top": 520,
      },
    },
  },
}
`;

exports[`Flow Manipulation nodes removal should remove node node2: Remove node2 1`] = `
Object {
  "node0": Object {
    "inboundConnections": Object {},
    "node": Object {
      "actions": Array [
        Object {
          "text": "Hi there, this is your first action!",
          "type": "send_msg",
          "uuid": "node0_action0",
        },
        Object {
          "groups": Array [
            Object {
              "name": "Flow Participants",
              "uuid": "group_0",
            },
          ],
          "type": "add_contact_groups",
          "uuid": "node0_action1",
        },
        Object {
          "groups": Array [
            Object {
              "name": "Nonresponsive",
              "uuid": "group_1",
            },
          ],
          "type": "remove_contact_groups",
          "uuid": "node0_action2",
        },
        Object {
          "labels": Array [
            Object {
              "name": "Help",
              "uuid": "label_0",
            },
            Object {
              "name": "Feedback",
              "uuid": "label_1",
            },
          ],
          "type": "add_input_labels",
          "uuid": "node0_action3",
        },
        Object {
          "name": "Started",
          "type": "set_run_result",
          "uuid": "node0_action4",
          "value": "true",
        },
      ],
      "exits": Array [
        Object {
          "destination_uuid": "node1",
          "name": null,
          "uuid": "node0_exit0",
        },
      ],
      "uuid": "node0",
    },
    "ui": Object {
      "position": Object {
        "bottom": 254,
        "left": 0,
        "right": 220,
        "top": 0,
      },
    },
  },
  "node1": Object {
    "inboundConnections": Object {
      "node0_exit0": "node0",
    },
    "node": Object {
      "actions": Array [],
      "exits": Array [
        Object {
          "destination_uuid": "node3",
          "uuid": "node1_exit0",
        },
        Object {
          "destination_uuid": "node3",
          "uuid": "node1_exit1",
        },
        Object {
          "destination_uuid": "node3",
          "uuid": "node1_exit2",
        },
      ],
      "router": Object {
        "cases": Array [
          Object {
            "arguments": Array [
              "red",
            ],
            "category_uuid": "node1_cat0",
            "type": "has_any_word",
            "uuid": "node1_case0",
          },
          Object {
            "arguments": Array [
              "green",
            ],
            "category_uuid": "node1_cat1",
            "type": "has_any_word",
            "uuid": "node1_case1",
          },
        ],
        "categories": Array [
          Object {
            "exit_uuid": "node1_exit0",
            "name": "Red",
            "uuid": "node1_cat0",
          },
          Object {
            "exit_uuid": "node1_exit1",
            "name": "Green",
            "uuid": "node1_cat1",
          },
          Object {
            "exit_uuid": "node1_exit2",
            "name": "Other",
            "uuid": "node1_cat2",
          },
        ],
        "default_exit_uuid": "node1_exit2",
        "operand": "@run.input",
        "result_name": "color",
        "type": "switch",
        "wait": Object {
          "type": "msg",
        },
      },
      "uuid": "node1",
    },
    "ui": Object {
      "position": Object {
        "bottom": 370,
        "left": 0,
        "right": 220,
        "top": 280,
      },
      "type": "wait_for_response",
    },
  },
  "node3": Object {
    "inboundConnections": Object {
      "node1_exit0": "node1",
      "node1_exit1": "node1",
      "node1_exit2": "node1",
    },
    "node": Object {
      "actions": Array [
        Object {
          "text": "Thanks for playing!",
          "type": "send_msg",
          "uuid": "node3_action0",
        },
      ],
      "exits": Array [
        Object {
          "destination_uuid": null,
          "name": null,
          "uuid": "node3_exit0",
        },
      ],
      "uuid": "node3",
    },
    "ui": Object {
      "position": Object {
        "bottom": 598,
        "left": 0,
        "right": 220,
        "top": 520,
      },
    },
  },
}
`;

exports[`Flow Manipulation nodes removal should remove node node3: Remove node3 1`] = `
Object {
  "node0": Object {
    "inboundConnections": Object {},
    "node": Object {
      "actions": Array [
        Object {
          "text": "Hi there, this is your first action!",
          "type": "send_msg",
          "uuid": "node0_action0",
        },
        Object {
          "groups": Array [
            Object {
              "name": "Flow Participants",
              "uuid": "group_0",
            },
          ],
          "type": "add_contact_groups",
          "uuid": "node0_action1",
        },
        Object {
          "groups": Array [
            Object {
              "name": "Nonresponsive",
              "uuid": "group_1",
            },
          ],
          "type": "remove_contact_groups",
          "uuid": "node0_action2",
        },
        Object {
          "labels": Array [
            Object {
              "name": "Help",
              "uuid": "label_0",
            },
            Object {
              "name": "Feedback",
              "uuid": "label_1",
            },
          ],
          "type": "add_input_labels",
          "uuid": "node0_action3",
        },
        Object {
          "name": "Started",
          "type": "set_run_result",
          "uuid": "node0_action4",
          "value": "true",
        },
      ],
      "exits": Array [
        Object {
          "destination_uuid": "node1",
          "name": null,
          "uuid": "node0_exit0",
        },
      ],
      "uuid": "node0",
    },
    "ui": Object {
      "position": Object {
        "bottom": 254,
        "left": 0,
        "right": 220,
        "top": 0,
      },
    },
  },
  "node1": Object {
    "inboundConnections": Object {
      "node0_exit0": "node0",
    },
    "node": Object {
      "actions": Array [],
      "exits": Array [
        Object {
          "destination_uuid": "node2",
          "uuid": "node1_exit0",
        },
        Object {
          "destination_uuid": "node2",
          "uuid": "node1_exit1",
        },
        Object {
          "destination_uuid": "node2",
          "uuid": "node1_exit2",
        },
      ],
      "router": Object {
        "cases": Array [
          Object {
            "arguments": Array [
              "red",
            ],
            "category_uuid": "node1_cat0",
            "type": "has_any_word",
            "uuid": "node1_case0",
          },
          Object {
            "arguments": Array [
              "green",
            ],
            "category_uuid": "node1_cat1",
            "type": "has_any_word",
            "uuid": "node1_case1",
          },
        ],
        "categories": Array [
          Object {
            "exit_uuid": "node1_exit0",
            "name": "Red",
            "uuid": "node1_cat0",
          },
          Object {
            "exit_uuid": "node1_exit1",
            "name": "Green",
            "uuid": "node1_cat1",
          },
          Object {
            "exit_uuid": "node1_exit2",
            "name": "Other",
            "uuid": "node1_cat2",
          },
        ],
        "default_exit_uuid": "node1_exit2",
        "operand": "@run.input",
        "result_name": "color",
        "type": "switch",
        "wait": Object {
          "type": "msg",
        },
      },
      "uuid": "node1",
    },
    "ui": Object {
      "position": Object {
        "bottom": 370,
        "left": 0,
        "right": 220,
        "top": 280,
      },
      "type": "wait_for_response",
    },
  },
  "node2": Object {
    "inboundConnections": Object {
      "node1_exit0": "node1",
      "node1_exit1": "node1",
      "node1_exit2": "node1",
    },
    "node": Object {
      "actions": Array [
        Object {
          "text": "This has been really great.",
          "type": "send_msg",
          "uuid": "node2_action0",
        },
        Object {
          "field": Object {
            "key": "unknown_field",
            "name": "Unknown Field",
          },
          "type": "set_contact_field",
          "uuid": "node2_action1",
          "value": "Some Value",
        },
      ],
      "exits": Array [
        Object {
          "destination_uuid": null,
          "name": null,
          "uuid": "node2_exit0",
        },
      ],
      "uuid": "node2",
    },
    "ui": Object {
      "position": Object {
        "bottom": 498,
        "left": 0,
        "right": 220,
        "top": 400,
      },
    },
  },
}
`;

exports[`Flow Manipulation nodes should store a pending connection when starting a drag 1`] = `
Array [
  Object {
    "payload": Object {
      "editorState": Object {
        "activity": Object {
          "nodes": Object {},
          "segments": Object {},
        },
        "activityInterval": 5000,
        "currentRevision": null,
        "debug": null,
        "dragActive": false,
        "dragDownPosition": null,
        "dragGroup": false,
        "dragNodeUUID": null,
        "dragSelection": null,
        "dragStartTime": 0,
        "fetchingFlow": false,
        "ghostNode": Object {
          "ghost": true,
          "inboundConnections": Object {
            "node0_exit0": "node0",
          },
          "node": Object {
            "actions": Array [],
            "exits": Array [
              Object {
                "destination_uuid": null,
                "uuid": "061fc171-8b79-4636-b892-bd0ea5aa9b42",
              },
            ],
            "router": Object {
              "cases": Array [],
              "categories": Array [
                Object {
                  "exit_uuid": "061fc171-8b79-4636-b892-bd0ea5aa9b42",
                  "name": "All Responses",
                  "uuid": "1dce2b34-9aab-4e20-81c4-3f0408dcb671",
                },
              ],
              "default_category_uuid": "1dce2b34-9aab-4e20-81c4-3f0408dcb671",
              "result_name": "Result 1",
              "type": "switch",
              "wait": Object {
                "type": "msg",
              },
            },
            "uuid": "b1f332f3-bdd3-4891-aec5-1843a712dbf1",
          },
          "ui": Object {
            "position": Object {
              "left": 0,
              "top": 0,
            },
            "type": "wait_for_response",
          },
        },
        "language": null,
        "liveActivity": Object {
          "nodes": Object {},
          "segments": Object {},
        },
        "popped": null,
        "scrollToAction": null,
        "scrollToNode": null,
        "simulating": false,
        "translating": false,
        "visible": true,
        "warnings": Object {},
      },
    },
    "type": "UPDATE_EDITOR_STATE",
  },
]
`;

exports[`Flow Manipulation routers should add random routers after an add action 1`] = `
Object {
  "inboundConnections": Object {},
  "node": Object {
    "actions": Array [],
    "exits": Array [
      Object {
        "destination_uuid": "132de855-4042-4dc1-a18f-cc2e6a8f790a",
        "name": null,
        "uuid": "node0_exit0",
      },
    ],
    "uuid": "node0",
  },
  "ui": Object {
    "position": Object {
      "bottom": 254,
      "left": 0,
      "right": 220,
      "top": 10,
    },
  },
}
`;

exports[`Flow Manipulation routers should add random routers after an add action 2`] = `
Object {
  "inboundConnections": Object {
    "node0_exit0": "node0",
  },
  "node": Object {
    "actions": Array [],
    "exits": Array [
      Object {
        "destination_uuid": null,
        "uuid": "061fc171-8b79-4636-b892-bd0ea5aa9b42",
      },
      Object {
        "destination_uuid": null,
        "uuid": "1dce2b34-9aab-4e20-81c4-3f0408dcb671",
      },
    ],
    "router": Object {
      "categories": Array [
        Object {
          "exit_uuid": "061fc171-8b79-4636-b892-bd0ea5aa9b42",
          "name": "Bucket 1",
          "uuid": "763e4844-3e1b-407a-a1b5-5fdfcd308b41",
        },
        Object {
          "exit_uuid": "1dce2b34-9aab-4e20-81c4-3f0408dcb671",
          "name": "Bucket 2",
          "uuid": "477ac8b4-25e2-483a-8686-2d1332c4da1c",
        },
      ],
      "type": "random",
    },
    "uuid": "132de855-4042-4dc1-a18f-cc2e6a8f790a",
  },
  "ui": Object {
    "position": Object {
      "bottom": 254,
      "left": 0,
      "right": 220,
      "top": 10,
    },
    "type": "split_by_random",
  },
}
`;
